checkstyle and errors more